--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/google-spreadsheet": "^3.3.2",
     "@types/node": "^18.19.3",
     "@types/react": "^18.2.45",
